--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
     </div>
 
     <div class="project-tile">
-      <h3>ferriswhell</h3>
+      <h3>ferriswheel</h3>
       <img src="registrationForm.png" alt="Registration Form">
       <p>You can use HTML forms to collect information from people who visit your webpage.</p>
       <a href="ferriswhell.html" target="_blank">View Project</a>
     </div>
 
     <div class="project-tile">
-      <h3>Registration Form</h3>
+      <h3>Making Penguin</h3>
       <img src="registrationForm.png" alt="Registration Form">
       <p>You can use HTML forms to collect information from people who visit your webpage.</p>
       <a href="penguin.html" target="_blank">View Project</a>
