--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Adrian Pili. All rights reserved.</p>
+    <p>&copy; 2025 June Mar Mondragon. All rights reserved.</p>
   </footer>
 
 </body>
