--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <section id="contact">
     <h2>Contact Me</h2>
     <p>If you'd like to get in touch, feel free to reach out via email at <a
-        href="mailto:adrianpaulo.pili.pbtsc@gmail.com">adrianpaulo.pili.pbtsc@gmail.com</a>.</p>
+        href="mailto:jeyemmmondragon@gmail.com">jeyemmmondragon@gmail.com</a>.</p>
   </section>
 
   <footer>
