--- a/index.html
+++ b/index.html
@@ -135,6 +135,13 @@
       <p>You can use HTML forms to collect information from people who visit your webpage.</p>
       <a href="penguin.html" target="_blank">View Project</a>
     </div>
+
+    <div class="project-tile">
+      <h3>Musicplayer</h3>
+      <img src="registrationForm.png" alt="Registration Form">
+      <p>You can use HTML forms to collect information from people who visit your webpage.</p>
+      <a href="musicplayer.html" target="_blank">View Project</a>
+    </div>
     
   </section>
 
