--- a/index.html
+++ b/index.html
@@ -142,7 +142,13 @@
       <p>You can use HTML forms to collect information from people who visit your webpage.</p>
       <a href="musicplayer.html" target="_blank">View Project</a>
     </div>
-    
+
+    <div class="project-tile">
+      <h3>Pyramid</h3>
+      <img src="registrationForm.png" alt="Registration Form">
+      <p>You can use HTML forms to collect information from people who visit your webpage.</p>
+      <a href="pyramid.html" target="_blank">View Project</a>
+    </div>
   </section>
 
   <!-- Contact Section -->
