--- a/rockpapersc.html
+++ b/rockpapersc.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rock, Paper, Scissors Game</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="rockpapersc.css" />
 </head>
 <body>
   <h1>Let's play Rock, Paper, Scissors!</h1>
@@ -44,6 +44,6 @@
     </div>
   </main>
 
-  <script src="script.js"></script>
+  <script src="rockpapersc.js"></script>
 </body>
 </html>
