--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
       <p>You can use HTML forms to collect information from people who visit your webpage.</p>
       <a href="calorie.html" target="_blank">View Project</a>
     </div>
+
+     <div class="project-tile">
+      <h3>Back Ground Color</h3>
+      <img src="registrationForm.png" alt="Registration Form">
+      <p>You can use HTML forms to collect information from people who visit your webpage.</p>
+      <a href="backgroundcl.html" target="_blank">View Project</a>
+    </div>
+    
   </section>
 
   <!-- Contact Section -->
