--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@
       <p>You can use HTML forms to collect information from people who visit your webpage.</p>
       <a href="backgroundcl.html" target="_blank">View Project</a>
     </div>
+
+    <div class="project-tile">
+      <h3>Role Playing</h3>
+      <img src="registrationForm.png" alt="Registration Form">
+      <p>You can use HTML forms to collect information from people who visit your webpage.</p>
+      <a href="roleplaying.html" target="_blank">View Project</a>
+    </div>
     
   </section>
 
