--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <a href="roleplaying.html" target="_blank">View Project</a>
     </div>
      <div class="project-tile">
-      <h3>Role Playing</h3>
+      <h3>Grade Book</h3>
       <img src="registrationForm.png" alt="Registration Form">
       <p>You can use HTML forms to collect information from people who visit your webpage.</p>
       <a href="gradebook.html" target="_blank">View Project</a>
